--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,19 @@ tasks.withType(Test) {
     }
 }
 
+def apiTest = tasks.register("apiTests", Test) {
+    useJUnitPlatform {
+        includeTags "API"
+    }
+}
+
+def uiTest = tasks.register("uiTests", Test) {
+    useJUnitPlatform {
+        includeTags "UI"
+    }
+}
+
+
 test {
     useJUnitPlatform()
 }
